--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>basic-mapping</module>
+        <module>relationships</module>
     </modules>
 
     <packaging>pom</packaging>
