--- a/relationships/pom.xml
+++ b/relationships/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>relationships</artifactId>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.verbose>true</maven.compiler.verbose>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -30,6 +37,20 @@
             <version>11.2.0</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.dbunit.datasetbuilder</groupId>
+            <artifactId>dbunit-datasetbuilder-generator</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
+    </build>
 
 </project>
